hasta fin intro properties incluso

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>hola Lit</h1>
     <dw-message></dw-message>
+    <dw-message msg="Esto es otro mensaje"></dw-message>
 
     <script src="index.js" type="module"></script>
 </body>
