--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>hola Lit</h1>
-    <dw-message></dw-message>
-    <dw-message msg="Esto es otro mensaje"></dw-message>
+    <dw-message show></dw-message>
+    <dw-message message="Esto es otro mensaje"></dw-message>
 
     <script src="index.js" type="module"></script>
 </body>
