--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>hola Lit</h1>
     <dw-message show></dw-message>
     <dw-message message="Esto es otro mensaje"></dw-message>
-
+    <eit-todo-list></eit-todo-list>
     <script src="index.js" type="module"></script>
 </body>
 </html>
